[project]
name = "async-download"
version = "1.4.0"
description = "Uses coroutines to download files"
readme = "README.md"
license = { text = "MIT license" }
authors = [
    { name = "danny crasto", email = "danwald79@gmail.com" }
]
keywords = ["async_download"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "click>=8.3.1",
    "more-itertools>=10.8.0",
    "tqdm>=4.67.3",
]

[project.scripts]
async_download = "async_download.cli:main"

[project.urls]
Homepage = "https://github.com/danwald/async_download"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 120
target-version = ["py312"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 120
force_sort_within_sections = true
skip_gitignore = true
lines_after_imports = 2
multi_line_output = 6
include_trailing_comma = true
force_single_line = true

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.coverage.run]
branch = true

[dependency-groups]
dev = [
    "black>=26.3.1",
    "coverage>=7.13.5",
    "flake8>=7.3.0",
    "isort>=8.0.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "twine>=6.2.0",
    "watchdog>=6.0.0",
]
